# python-cli-app-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.example.toml  pyproject.toml  requirements.txt
cli_app/: __init__.py  api_client.py  config.py  main.py
examples/: __init__.py  api_client_example.py
scripts/: __init__.py  setup_dev.py
tests/: __init__.py  conftest.py  test_api_client.py  test_config.py  test_main.py
